add posts layout

--- a/public/sobre/index.html
+++ b/public/sobre/index.html
@@ -102,7 +102,7 @@ Esta página foi criada seguindo as práticas idiomáticas do Hugo, utilizando o
 
         <span class="header__right">
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="/blog/">Blog</a></li><li><a href="/sobre/">Sobre</a></li>
+    <ul class="menu__inner"><li><a href="/posts/">Blog</a></li><li><a href="/sobre/">Sobre</a></li>
     </ul>
 </nav>
 
