--- a/public/404.html
+++ b/public/404.html
@@ -88,7 +88,7 @@
 
         <span class="header__right">
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="/blog/">Blog</a></li><li><a href="/sobre/">Sobre</a></li>
+    <ul class="menu__inner"><li><a href="/posts/">Blog</a></li><li><a href="/sobre/">Sobre</a></li>
     </ul>
 </nav>
 
